Fixed coordinates on custom pointer. This now aligns with the normal cursor.

--- a/MAIN/app/styles/Buttons.module.scss
+++ b/MAIN/app/styles/Buttons.module.scss
@@ -48,7 +48,7 @@
   &:hover {
     background-color: #ff782d;
     // cursor: pointer;
-    cursor: url("/cursor_pointer.png"), pointer;
+    cursor: url("/cursor_pointer.png") 5 0, pointer;
   }
 
   &:active {
